@@ -19,31 +19,43 @@ end_package
 
 begin_import
 import|import
-name|java
+name|com
 operator|.
-name|awt
+name|jgoodies
 operator|.
-name|BorderLayout
+name|forms
+operator|.
+name|builder
+operator|.
+name|PanelBuilder
 import|;
 end_import
 
 begin_import
 import|import
-name|java
+name|com
 operator|.
-name|awt
+name|jgoodies
 operator|.
-name|Dimension
+name|forms
+operator|.
+name|layout
+operator|.
+name|CellConstraints
 import|;
 end_import
 
 begin_import
 import|import
-name|java
+name|com
 operator|.
-name|awt
+name|jgoodies
 operator|.
-name|FlowLayout
+name|forms
+operator|.
+name|layout
+operator|.
+name|FormLayout
 import|;
 end_import
 
@@ -119,43 +131,31 @@ end_import
 
 begin_import
 import|import
-name|com
+name|java
 operator|.
-name|jgoodies
+name|awt
 operator|.
-name|forms
-operator|.
-name|builder
-operator|.
-name|PanelBuilder
+name|BorderLayout
 import|;
 end_import
 
 begin_import
 import|import
-name|com
+name|java
 operator|.
-name|jgoodies
+name|awt
 operator|.
-name|forms
-operator|.
-name|layout
-operator|.
-name|CellConstraints
+name|Dimension
 import|;
 end_import
 
 begin_import
 import|import
-name|com
+name|java
 operator|.
-name|jgoodies
+name|awt
 operator|.
-name|forms
-operator|.
-name|layout
-operator|.
-name|FormLayout
+name|FlowLayout
 import|;
 end_import
 
@@ -286,19 +286,7 @@ name|builder
 operator|.
 name|add
 argument_list|(
-operator|new
-name|JScrollPane
-argument_list|(
 name|messageLabel
-argument_list|,
-name|ScrollPaneConstants
-operator|.
-name|VERTICAL_SCROLLBAR_AS_NEEDED
-argument_list|,
-name|ScrollPaneConstants
-operator|.
-name|HORIZONTAL_SCROLLBAR_NEVER
-argument_list|)
 argument_list|,
 name|cc
 operator|.
